<resources>
    <string name="app_name">TutorHelp</string>

    <string name="studentLabel">Student</string>
    <string name="tutorLabel">Tutor</string>

    <string name="zid">zID</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email Address</string>


    <string name="name">Name</string>
    <string name="timeSlot">Time Slot</string>
    <string name="location">Location</string>

    <string name="description">Description</string>
    <string name="weighting">Weighting (%)</string>
    <string name="maxmarks">Total Marks</string>

    <string name="hello">Hello </string>
    <string name="week">Week </string>

    <string name="nostudents">There are no students in this tutorial!</string>
    <string name="noassessments">There are no assessments for this term!</string>
    <string name="weightingError">Must be between 0 and 100!</string>
    <string name="greaterThanZero">Must be greater than 0!</string>
    <string name="invalidValue">Invalid value!</string>

    <string name="deleteTutorialMsg">Delete this tutorial?</string>
    <string name="deleteTutorMsg">Delete this tutor? \n \n This will delete all tutorials created by this tutor! Don\'t do bad!!!!</string>
    <string name="deleteStudentMsg">Delete this student?</string>
    <string name="deleteAssessmentMsg">Delete this assessment?</string>

    <string name="grade">Grade</string>


    <string name="student">Students</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorials">Tutorials</string>

    <string name="assessements">Assessments</string>


    <string name="stats">Statistics</string>
    <string name="mean">Mean</string>
    <string name="distribution">Distribution</string>

    <string name="mark">Mark</string>
    <string name="count">Count</string>

    <string name="distributionChart">Distribution</string>
    <string name="allMarksChart">All Students</string>

    <string name="attendance">Attendance</string>
    <string name="assessment">Assessments</string>

    <string name="publicComment">Public Comment</string>
    <string name="privateComment">Private Comment</string>


    <string name="S1">Semester 1</string>
    <string name="S2">Semester 2</string>
    <string name="ST">Summer</string>

    <string name="openDrawer">Drawer Open</string>
    <string name="closeDrawer">Drawer Close</string>

    <string name="editStart">Editing enabled!</string>
    <string name="editCancel">Changes discarded!</string>
    <string name="editSave">Changes saved!</string>

    <string name="editTutor">Edit Tutor</string>


    <!--
        BUTTONS
    -->
    <string name="login">Login</string>
    <string name="newTutor">New Tutor</string>
    <string name="deleteTutor">Delete Tutor</string>
    <string name="newTutorial">New Tutorial</string>
    <string name="newAssessment">New Assessment</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="attended">Attended</string>
    <string name="notAttended">Not Attended</string>
    <string name="graph">Grades</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
