<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amisrs.gavin.tutorhelp.view.NewTutorialActivity">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTutorial"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_below="@id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/et_timeSlot"
        android:layout_below="@id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timeSlot"/>

    <EditText
        android:id="@+id/et_location"
        android:layout_below="@id/et_timeSlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"/>

    <Spinner
        android:id="@+id/sp_sem"
        android:layout_below="@id/et_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>

    <Spinner
        android:id="@+id/sp_year"
        android:layout_below="@id/et_location"
        android:paddingLeft="5dp"
        android:layout_toRightOf="@id/sp_sem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>

    <Button
        android:id="@+id/btn_create"
        android:layout_below="@id/sp_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

</RelativeLayout>
