<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amisrs.gavin.tutorhelp.view.NewTutorActivity">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTutor"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <RelativeLayout
        android:id="@+id/rl_fieldEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_toRightOf="@+id/rl_camera">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_zid"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_zid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zid"
                android:maxLength="8" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/til_zid">

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/til_fname">

            <EditText
                android:id="@+id/et_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/rl_camera"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/tv_title"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/btn_camera_capture"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="right|bottom"
            android:background="#0000"
            android:src="@drawable/ic_add_a_photo_black_24dp" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create" />

</RelativeLayout>
