<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TutorActivity">


    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:alpha="0.3"
        android:src="@drawable/blank"/>

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:elevation="5dp">
        <Button
            android:id="@+id/btn_deleteTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_centerHorizontal="true"
            style="@android:style/Widget.Holo.Button.Borderless.Small"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10sp"
            android:text="@string/deleteTutor"/>

        <Button
            android:id="@+id/btn_newTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_deleteTutor"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10sp"
            android:text="@string/newTutor"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/btn_newTutor"
            android:layout_marginBottom="48dp"

            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:elevation="0dp"
            android:text="@string/login"/>
        <Spinner
            android:id="@+id/sp_tutor"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/btn_login"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textAlignment="center"
            android:background="@color/white">

        </Spinner>
        <ImageView
            android:layout_above="@id/sp_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/qwewqewqqw"/>



    </RelativeLayout>

</RelativeLayout>
