<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#EEEEEE"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amisrs.gavin.tutorhelp.view.NewStudentActivity">

    <TextView
        android:id="@+id/student_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Student"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/student_title"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/fl_camera">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_student_zid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_student_zid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zid"
                android:maxLength="7"
                android:textColorHighlight="@color/colorTextSelectHighlight"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_student_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_student_zid">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_student_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname"
                android:textColorHighlight="@color/colorTextSelectHighlight"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_student_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_student_fname">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_student_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname"
                android:textColorHighlight="@color/colorTextSelectHighlight"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_student_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_student_lname">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_student_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_student_lname"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHighlight="@color/colorTextSelectHighlight"/>

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_camera"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingRight="16dp"
        android:layout_centerVertical="true"
        >

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/btn_camera_capture"
            android:layout_gravity="center|bottom"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:paddingBottom="15dp"
            android:scaleType="fitCenter"
            android:tint="@color/colorControlNormal"
            />


    </FrameLayout>


</RelativeLayout>